| Summary: | ASTERISK-29813: res_pjsip_session doesn't support multipart message bodies | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2021-12-21 08:40:28.000-0600 | Date Closed: | 2022-01-17 11:31:44.000-0600 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_session |
| Versions: | 16.23.0 18.9.0 19.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | res_pjsip_session assumes the the sdp is the only thing in the message body. This will not be the case when geolocation info is added.
| ||
| Comments: | By: Friendly Automation (friendly-automation) 2022-01-17 11:31:45.234-0600 Change 17871 merged by Friendly Automation: res_pjsip: Make message_filter and session multipart aware [https://gerrit.asterisk.org/c/asterisk/+/17871|https://gerrit.asterisk.org/c/asterisk/+/17871] By: Friendly Automation (friendly-automation) 2022-01-17 12:10:38.530-0600 Change 17797 merged by Friendly Automation: res_pjsip: Make message_filter and session multipart aware [https://gerrit.asterisk.org/c/asterisk/+/17797|https://gerrit.asterisk.org/c/asterisk/+/17797] By: Friendly Automation (friendly-automation) 2022-01-17 12:15:20.298-0600 Change 17872 merged by Friendly Automation: res_pjsip: Make message_filter and session multipart aware [https://gerrit.asterisk.org/c/asterisk/+/17872|https://gerrit.asterisk.org/c/asterisk/+/17872] By: Friendly Automation (friendly-automation) 2022-01-17 12:22:34.977-0600 Change 17870 merged by Joshua Colp: res_pjsip: Make message_filter and session multipart aware [https://gerrit.asterisk.org/c/asterisk/+/17870|https://gerrit.asterisk.org/c/asterisk/+/17870] | ||